# hand_capture_system2

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  THIRD_PARTY_NOTICES.md
apps/: single_view_hand_pose_demo.cpp  stereo_aruco_localization_demo.cpp  stereo_aruco_marker_generator.cpp  stereo_calibration_app.cpp  stereo_calibration_visualize_app.cpp  stereo_camera_tracking_demo.cpp  stereo_capture_benchmark_app.cpp  stereo_capture_demo.cpp  stereo_charuco_board_generator.cpp  stereo_charuco_localization_demo.cpp  stereo_fused_hand_pose_demo.cpp  stereo_fused_hand_pose_offline_demo.cpp  stereo_fused_hand_pose_replay_app.cpp  stereo_guided_calibration_app.cpp  stereo_offline_capture_app.cpp  stereo_single_view_hand_pose_demo.cpp
docs/: apps.md  architecture.md  calibration_step3.md  fusion_step4.md  perception_step2.md  runbook_zh.md  slam_integration.md  stereo_single_view_pose_module.md
include/newnewhand/calibration/: stereo_calibration_visualizer.h  stereo_calibrator.h
include/newnewhand/capture/: stereo_capture.h
include/newnewhand/fusion/: stereo_hand_fuser.h
include/newnewhand/io/: offline_sequence_writer.h
include/newnewhand/perception/: hand_pose_estimator.h
include/newnewhand/pipeline/: stereo_single_view_hand_pose_pipeline.h
include/newnewhand/render/: glfw_scene_viewer.h
include/newnewhand/slam/: offline_camera_trajectory_optimizer.h  stella_vslam_tracker.h  stereo_visual_odometry.h
include/newnewhand/types/: stereo_frame.h
include/newnewhand/visualization/: hand_pose_overlay.h
resources/: stereo_calibration.yaml
src/calibration/: stereo_calibration_visualizer.cpp  stereo_calibrator.cpp
src/capture/: mv_camera.cpp  mv_camera.h  stereo_capture.cpp
src/fusion/: stereo_hand_fuser.cpp
src/io/: offline_sequence_writer.cpp
src/perception/: hand_pose_estimator.cpp  hand_pose_utils.cpp  hand_pose_utils.h  wilor_model.cpp  wilor_model.h  yolo_detector.cpp  yolo_detector.h
src/pipeline/: stereo_single_view_hand_pose_pipeline.cpp
src/render/: glfw_scene_viewer.cpp
src/slam/: offline_camera_trajectory_optimizer.cpp  stella_vslam_tracker.cpp  stereo_visual_odometry.cpp
src/visualization/: hand_pose_overlay.cpp
tools/: export_wilor_safe_onnx.py  export_wilor_split_onnx.py
